sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:6: error: ';' expected but '(' found.
{var lm : getValeur(i);
                   ^AlgInsertionSort:7: error: illegal start of simple pattern
for(j<- i to 0 by -1;)
                     ^AlgInsertionSort:12: error: illegal start of simple expression
}
^